2014-01-04  Murray Stokely  <mstokely@google.com>

	* R/wrapper_CodedInputStream.R: Accept numeric size arguments for
	  ReadRaw and ReadString to make this more user friendly for
	  interactive use by calling as.integer() as needed.
	* R/00classes.R (P): Add missing object prameters in
	  ZeroCopyInputStream calls to ReadRaw and ReadString.
	* inst/unitTests/data/encoding.proto: Add example messages used in
	  the encoding documentation.
	* inst/unitTests/runit.serialize.R (test.encoding): Add tests
	  verifying the exact byte serialization as described in the
	  encoding documentation.
	  (test.arrayinputstream): Add new test of ArrayInputStreams.
	* src/wrapper_ZeroCopyInputStream.cpp (rprotobuf): Add
	  BEGIN/END_RCPP macros to gracefully catch exceptions and return
	  them as R language errors.
	* src/streams.cpp (rprotobuf): Idem.
	* man/ArrayInputStream-class.Rd: Add some examples of using
	  ArrayInputStream.

2014-01-04  Dirk Eddelbuettel  <edd@debian.org>

	* src: Deprecate files SocketCopyingInputStream.{cpp,h}, sisocks.h as
	the current RProtoBuf design does not provide networking capabilities

2013-12-31  Murray Stokely  <mstokely@google.com>

	* src/wrapper_Message.cpp: Fix type coercion bug in add() method
	  for uint32s and add a missing break statement that erroneously
	  raised an error when setting some int64 fields.  Make more
	  function arguments const and remove a superfluous
	  BEGIN_RCPP/END_RCPP.  Also add comment about long-vector
	  support.  All of these fixes were highlighted by Flexelint.
	* inst/unitTests/runit.int64.R (test.int64): Add tests for above.
	* inst/unitTests/runit.extremevalues.R (test.uint32): Idem.
	* src/wrapper_FieldDescriptor.cpp (RPB_HANDLE_CASE): Remove
	  unreachable statement in a macro.
	* src/wrapper_Descriptor.cpp (rprotobuf): Remove unused variable,
	  rename another variable for clarity, and add some TODOs.
	* src/wrapper_FileDescriptor.cpp (rprotobuf): Idem.